src/objects/DSCORGPKG__Conflict__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DiscoverOrg Conflicts</relationshipLabel>
        <relationshipName>Conflicts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiscoverOrg Operation</label>
        <referenceTo>DSCORGPKG__DiscoverOrg_Operation__c</referenceTo>
        <relationshipLabel>DiscoverOrg Conflicts</relationshipLabel>
        <relationshipName>DiscoverOrg_Conflicts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DiscoverOrg Conflicts</relationshipLabel>
        <relationshipName>Conflicts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SalesForceAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesForceAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DiscoverOrg Conflicts</relationshipLabel>
        <relationshipName>Conflicts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DiscoverOrg Conflict</label>
    <listViews>
        <fullName>DSCORGPKG__All</fullName>
        <columns>NAME</columns>
        <columns>DSCORGPKG__Contact__c</columns>
        <columns>DSCORGPKG__Lead__c</columns>
        <columns>DSCORGPKG__SalesForceAccount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DSCORGPKG__DiscoverOrg_Operation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Conflicts</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Conflict Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Conflicts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>